# SDPPM

./: README.md
.github/workflows/: cmake-single-platform.yml
CMake_Old_Lab_1/: CMakeLists.txt
CMake_Old_Lab_1/include/: CMake_Old_Lab_1.h
CMake_Old_Lab_1/scr/: CMake_Old_Lab_1.cpp  bitarray.cpp
CMake_Old_Lab_1/tests/: CMakeLists.txt  Tests.cpp
